--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Վալոդյա & Նարինե</title>
+    <title>Վլադիմիր & Նարինե</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 
@@ -13,7 +13,7 @@
 
     <div class="layout">
         <header>
-            <div class="names"> Վալոդյա & Նարինե</div>
+            <div class="names"> Վլադիմիր & Նարինե</div>
             <h2 class="date"> 25 05 2025</h2>
         </header>
 
@@ -45,7 +45,7 @@
         <h2 class="plan-title">Օրվա ծրագիր</h2>
 
         <div class="place">
-            <h2 class="time">15:00</h2>
+            <h2 class="time">15:20</h2>
             <div class="city">Սուրբ Հռիփսիմե եկեղեցի</div>
             <span class="address">հասցե՝ Էջմիածին
                 Մաշտոցի փողոց</span>
@@ -59,7 +59,7 @@
 
         <div class="place">
 
-            <h2 class="time">16:30</h2>
+            <h2 class="time">17:30</h2>
             <div class="city">Դվին Ռեստորանային համալիր
             </div>
             <span class="address">հասցե՝ Էջմիածին
