--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="layout">
         <header>
             <div class="names"> Վլադիմիր & Նարինե</div>
-            <h2 class="date"> 25 05 2025</h2>
+            <h2 class="date"> 25.05.2025</h2>
         </header>
 
 
