--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="layout">
         <header>
-            <div class="names"> Վլադիմիր & Նարինե</div>
+            <div class="names"> Վլադիմիր և Նարինե</div>
             <h2 class="date"> 25.05.2025</h2>
         </header>
 
